add routing for SPA functionality

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <main>
       <h1>Hello 👋 I'm Nischal</h1>
       <nav>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="resume.html">Resume</a>
+        <a href="#/">Home</a>
+        <a href="#/about">About</a>
+        <a href="#/contact">Contact</a>
+        <a href="#/resume">Resume</a>
+
+        <section id="app"></section>
       </nav>
     </main>
     <script src="app.js"></script>
+    <script src="router.js"></script>
   </body>
 </html>
