Open resume in new tab

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,1 +1,1 @@
-<p><a href="https://drive.google.com/file/d/1_-_KkaLpeGzH-NcNcqH-YfCezhK3PuA2/view?usp=drive_link">View Resume</a></p>
+<p><a href="https://drive.google.com/file/d/1_-_KkaLpeGzH-NcNcqH-YfCezhK3PuA2/view?usp=drive_link" target="_blank">View Resume</a></p>
